--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,16 +12,19 @@
     />
   </head>
   <body>
-    <h3>Ingresar a twitter</h3>
-    <div class="row">
-      <div class="col-md-6">
-        <a
-          class="btn btn-info btn-lg"
-          href="http://localhost:3000/registro"
-        ></a>
-      </div>
-      <div class="col-md-6">
-        <a class="btn btn-link btn-lg" href="http://localhost:3000/login"></a>
+    <div class="container">
+      <h3>Ingresar a twitter</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <a class="btn btn-info btn-lg" href="http://localhost:3000/registro"
+            >Registrate aquí</a
+          >
+        </div>
+        <div class="col-md-6">
+          <a class="btn btn-link btn-lg" href="http://localhost:3000/login"
+            >Iniciar sesión</a
+          >
+        </div>
       </div>
     </div>
   </body>
