--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-  </head>
+  <%- include("partials/head") %>
   <body>
     <div class="container">
-      <h3>Ingresar a twitter</h3>
+      <h3 class="text-center">Ingresar a twitter</h3>
       <div class="row">
         <div class="col-md-6">
           <a class="btn btn-info btn-lg" href="http://localhost:3000/registro"
