--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <%- include("partials/head") %>
   <body>
     <div class="container">
-      <h3 class="text-center">Ingresar a twitter</h3>
+      <h3 class="text-center">Ingresar a Twita</h3>
       <div class="row">
         <div class="col-md-6">
           <a class="btn btn-info btn-lg" href="http://localhost:3000/registro"
