--- a/views/register.ejs
+++ b/views/register.ejs
@@ -42,7 +42,7 @@
               name="password"
               class="form-control"
               id="password"
-              type="text"
+              type="password"
             />
 
             <button type="submit">Registrate</button>
