--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,9 @@
   <%- include("partials/head") %>
   <body>
     <div class="container">
+      <% if(user) { %>
+      <h1>Bienvenido a Twita</h1>
+      <% } else { %>
       <h3 class="text-center">Ingresar a Twita</h3>
       <div class="row">
         <div class="col-md-6">
@@ -17,5 +20,6 @@
         </div>
       </div>
     </div>
+    <% } %>
   </body>
 </html>
