--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("partials/head") %>
-<body>
+  <%- include("partials/head") %>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <img src="" alt="Twita logo">
-                <h1>Log in to Twita</h1>
-            </div>
-            <div class="col-md-12">
-                <form class="form-group" action="/login" method="POST">
-                    <label for="username" class="">Username or Email</label>
-                    <input name="username" class="form-control" id="username" type="text"/>
-
-                    <label for="password" class="">Password</label>
-                    <input name="password" class="form-control" id="password" type="text"/>
-
-                    <button type="submit">Log In</button>
-                </form>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <img src="" alt="Twita logo" />
+          <h1>Log in to Twita</h1>
         </div>
+        <div class="col-md-12">
+          <form class="form-group" action="/login" method="POST">
+            <label for="username" class="">Username or Email</label>
+            <input
+              name="username"
+              class="form-control"
+              id="username"
+              type="text"
+            />
+
+            <label for="password" class="">Password</label>
+            <input
+              name="password"
+              class="form-control"
+              id="password"
+              type="password"
+            />
+
+            <button type="submit">Log In</button>
+          </form>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
