--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <div class="container">
       <% if(user) { %>
       <h1>Bienvenido a Twita</h1>
+      <a href="http://localhost:3000/logout">Log Out</a>
       <% } else { %>
       <h3 class="text-center">Ingresar a Twita</h3>
       <div class="row">
