--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,19 @@
     <div class="container">
       <% if(user) { %>
       <h1>Bienvenido a Twita</h1>
+
+      <div class="row">
+        <div class="col-12">
+          <h3>Twiteale algo al mundo</h3>
+          <form class="form-group" action="/twitealo" method="POST">
+            <input type="hidden" name="author" value="5f86f29ebcc0035014d33151" />
+            <input type="hidden" name="dateOfCreation" value=<% Date.now() %>>
+            <textarea name="body" rows='4'> </textarea>
+            <button type="submit">Twit!</button>
+          </form>
+        </div>
+      </div>  
+
       <% } else { %>
       <h3 class="text-center">Ingresar a Twita</h3>
       <div class="row">
