user profile routes and controller created

--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -23,28 +23,28 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-2">
                 <div>
                     <img src="" alt="foto de perfil">
                     <p>nombre de usuario</p>
                 </div>
 
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-8">
                 <h1>Twits de Username</h1>
-
+                
                 <!-- cada twit  -->
-                <div class="">
+                <div class="twit-container">
                     <div class="row">
                         <!-- Usuario -->
-                        <div class="col">
-                            <img class="img-twit card-img" src="" alt="">
+                        <div class="col-12 d-flex">
+                            <img class="img-twit" src="" alt="">
                             <p>nombre y apellido</p>
                             <p>username</p>
                             <button>Follow</button>
                         </div>
                         <!-- Twit -->
-                        <div class="col">
+                        <div class="col-12">
                             <p>
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati et mollitia molestiae quae amet nulla autem alias itaque exercitationem porro praesentium, odio iure voluptate dolor quis, culpa enim fuga aut!
                             </p>
