--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,13 +10,19 @@
         <div class="col-12">
           <h3>Twiteale algo al mundo</h3>
           <form class="form-group" action="/twitealo" method="POST">
-            <input type="hidden" name="author" value="5f86f29ebcc0035014d33151" />
-            <input type="hidden" name="dateOfCreation" value=<% Date.now() %>>
-            <textarea name="body" rows='4'> </textarea>
+            <input type="hidden" name="author" value="<%- user._id %>" />
+            <input
+              type="hidden"
+              name="dateOfCreation"
+              value="<%
+              Date.now()
+              %>"
+            />
+            <textarea name="body" rows="4"> </textarea>
             <button type="submit">Twit!</button>
           </form>
         </div>
-      </div>  
+      </div>
 
       <a href="http://localhost:3000/logout">Log Out</a>
       <% } else { %>
