--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -17,7 +17,7 @@
     />
   
     <!-- CSS Propio --->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Perfil del user</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
             </div>
             <div class="col-sm-8">
                 <h1>Twits de Username</h1>
-                
+
                 <!-- cada twit  -->
                 <div class="twit-container">
                     <div class="row">
@@ -58,5 +58,7 @@
     </div>
 
     <%- include('partials/scripts')  %> 
+    <!-- JS Propio -->
+    <script src="../js/app.js"></script>
 </body>
 </html>
