--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -15,50 +15,52 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-  
+
     <!-- CSS Propio --->
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Perfil del user</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-2">
-                <div>
-                    <img src="" alt="foto de perfil">
-                    <p>nombre de usuario</p>
-                </div>
-
-            </div>
-            <div class="col-sm-8">
-                <h1>Twits de Username</h1>
-
-                <!-- cada twit  -->
-                <div class="twit-container">
-                    <div class="row">
-                        <!-- Usuario -->
-                        <div class="col-12 d-flex">
-                            <img class="img-twit" src="" alt="">
-                            <p>nombre y apellido</p>
-                            <p>username</p>
-                            <button>Follow</button>
-                        </div>
-                        <!-- Twit -->
-                        <div class="col-12">
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati et mollitia molestiae quae amet nulla autem alias itaque exercitationem porro praesentium, odio iure voluptate dolor quis, culpa enim fuga aut!
-                            </p>
-                            <button>Like!</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <div>
+            <img src="" alt="foto de perfil" />
+            <p>nombre de usuario</p>
+            <a href="http://localhost:3000/logout">Log Out</a>
+          </div>
         </div>
+        <div class="col-sm-8">
+          <h1>Twits de Username</h1>
+
+          <!-- cada twit  -->
+          <div class="twit-container">
+            <div class="row">
+              <!-- Usuario -->
+              <div class="col-12 d-flex">
+                <img class="img-twit" src="" alt="" />
+                <p>nombre y apellido</p>
+                <p>username</p>
+                <button>Follow</button>
+              </div>
+              <!-- Twit -->
+              <div class="col-12">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Obcaecati et mollitia molestiae quae amet nulla autem alias
+                  itaque exercitationem porro praesentium, odio iure voluptate
+                  dolor quis, culpa enim fuga aut!
+                </p>
+                <button>Like!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <%- include('partials/scripts')  %> 
+    <%- include('partials/scripts') %>
     <!-- JS Propio -->
     <script src="../js/app.js"></script>
-</body>
+  </body>
 </html>
