--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
       <h6 class="text-center">Únete al twita ya mismo</h5>
       <div class="d-flex justify-content-center">       
           <a class="btn btn-signUp btn-lg" href="http://localhost:3000/registro"
-            >Registrate aquí</a
+            >Regístrate aquí</a
           >
         <a class="btn btn-logIn btn-lg" href="http://localhost:3000/login"
             >Iniciar sesión</a
