--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,10 +6,15 @@
       <div class="row">
         <div class="col-md-12">
           <img src="" alt="Twita logo" />
-          <h1>Log in to Twita</h1>
+          <h1 class="text-center">Log In to Twita</h1>
         </div>
         <div class="col-md-12">
-          <form class="form-group" action="/login" method="POST">
+          <form
+            id="form-logIn"
+            class="form-group"
+            action="/login"
+            method="POST"
+          >
             <label for="username" class="">Username or Email</label>
             <input
               name="username"
@@ -25,8 +30,11 @@
               id="password"
               type="password"
             />
-
-            <button type="submit">Log In</button>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-logIn btn-lg mt-2" type="submit">
+                Log In
+              </button>
+            </div>
           </form>
         </div>
       </div>
