--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
               value=<%-Date.now()%>  
             />
             <textarea name="body" rows="4"> </textarea>
-            <button type="submit">Twit!</button>
+            <div><button type="submit">Twit!</button></div>
           </form>
         </div>
       </div>
@@ -62,7 +62,7 @@
           <a class="btn btn-signUp btn-lg" href="http://localhost:3000/registro"
             >Regístrate aquí</a
           >
-        <a class="btn btn-logIn btn-lg" href="http://localhost:3000/login"
+        <a class="btn btn-logIn-home btn-lg" href="http://localhost:3000/login"
             >Iniciar sesión</a
           >
         </div>
