--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,6 +35,11 @@
                 Log In
               </button>
             </div>
+            <div class="text-center">
+              <a class="link-logIn" href="http://localhost:3000/registro"
+                >Regístrate en Twita</a
+              >
+            </div>
           </form>
         </div>
       </div>
