new following nos appears on feed after follow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,3 +71,14 @@
   background-color: antiquewhite;
   border-radius: 15px;
 }
+.avatar-profile {
+    
+    border: 2px solid rgb(177, 103, 103);
+    object-fit: cover;
+    position: relative;
+    
+}
+.avatar-twit {
+    width: 150px;
+    object-fit: cover;
+}
