--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
         <div class="row my-3">
           <!-- Usuario -->
           <div class="col-12 d-flex justify-content-between">
-            <img class="img-twit" src=<%- twit.author.avatar %> alt="" />
+            <img class="img-thumbnail avatar-twit" src=<%- twit.author.avatar %> alt="" />
             <p><%- twit.author.firstname %> <%- twit.author.lastname %> </p>
             <p><%- twit.author.username %></p>
             <form action="/follow" method="POST">
