Like dislike funcionality andando

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,5 +17,5 @@
     />
   
     <!-- CSS Propio --->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
