--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
             <img class="img-thumbnail avatar-twit" src=<%- twit.author.avatar %> alt="" />
             <p><%- twit.author.firstname %> <%- twit.author.lastname %> </p>
             <p><%- twit.author.username %></p>
-            
+
             <% if(user.following.indexOf(twit.author._id) != -1) { %>
               <form action="/follow" method="POST">
                 
@@ -56,8 +56,21 @@
             </p>
             <div>
                 <p> <%- twit.dateOfCreation %></p>
-                <p> <%- twit.likes %></p>
-                <button>Like!</button>
+                <p> <%- twit.likes.length %></p>
+                <% if (twit.likes.indexOf(user._id) != -1) { %>
+                  <form action="/like" method="POST">
+                    
+                    <input type="hidden" name="author" value=<%- twit._id %> />
+                    <button type="submit">Dislike</button>
+                    
+                  </form>
+                <% } else { %>
+                  <form action="/like" method="POST">
+                
+                    <input type="hidden" name="author" value=<%-twit._id %> />
+                    <button type="submit">Like!</button>
+                  </form>
+                <% } %>
             </div>
             
           </div>
