--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,15 +2,17 @@
 <html lang="en">
   <%- include("partials/head") %>
   <body>
+    <%- include("partials/navbar") %>
+
     <div class="container">
-      <% if(user) { %>
+      <% if(userSession._id != "voidUsername") { %>
       <h1 class="titleUserHome">Bienvenido a Twita</h1>
 
       <div class="row">
         <div class="col-12">
           <h3>Twiteale algo al mundo</h3>
           <form class="form-group" action="/twitealo" method="POST">
-            <input type="hidden" name="author" value=<%- user._id %> />
+            <input type="hidden" name="author" value=<%- userSession._id %> />
             <input
               type="hidden"
               name="dateOfCreation"
@@ -32,7 +34,7 @@
             <p><%- twit.author.firstname %> <%- twit.author.lastname %> </p>
             <p><%- twit.author.username %></p>
 
-            <% if(user.following.indexOf(twit.author._id) != -1) { %>
+            <% if(userSession.following.indexOf(twit.author._id) != -1) { %>
               <form action="/follow" method="POST">
                 
                 <input type="hidden" name="author" value=<%- twit.author._id %> />
@@ -57,7 +59,7 @@
             <div>
                 <p> <%- twit.dateOfCreation %></p>
                 <p> <%- twit.likes.length %></p>
-                <% if (twit.likes.indexOf(user._id) != -1) { %>
+                <% if (twit.likes.indexOf(userSession._id) != -1) { %>
                   <form action="/like" method="POST">
                     
                     <input type="hidden" name="author" value=<%- twit._id %> />
@@ -78,7 +80,7 @@
         <% }) %>
         </div>
 
-      <a href="http://localhost:3000/logout">Log Out</a>
+      
       <% } else { %>
       <h2 class="titleHome">Ingresar a Twita</h3>
       <h6 class="text-center">Únete al twita ya mismo</h5>
