--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -16,12 +16,12 @@
 </head>
 
 <body>
+  <%- include("partials/navbar") %>
   <div class="container">
     <div class="row">
       <div class="col-sm-2">
         <img src="<%- userProfile.avatar %>" class="img-thumbnail avatar-profile" alt="foto de perfil" />
         <p><%- userProfile.username %></p>
-        <a href="http://localhost:3000/logout">Log Out</a>
       </div>
       <div class="col-sm-8">
         <h1>Twits de <%- userProfile.username %></h1>
