--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,16 +2,16 @@
 <html lang="en">
   <%- include("partials/head") %>
   <body>
+    <%- include("partials/navbar") %>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img src="" alt="Twita logo" />
           <h1 class="text-center">Sign Up on Twita</h1>
         </div>
         <div class="col-md-12">
           <form
             id="form-signUp"
-            class="form-group"
+            class="form-group m-auto"
             action="/registro"
             method="POST"
           >
