--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,17 @@
+/* NAVBAR */
+.twita-logo {
+  transform: scaleX(-1);
+  width: 260px;
+  margin-top: -100px;
+}
+.nav-item {
+  padding-top: 60px;
+}
+.nav-link {
+  font-size: 1.5rem;
+}
+
+
 /* HOME NOT LOGGED */
 .titleHome {
   text-align: center;
@@ -32,9 +46,7 @@
 
 /* URL LOGIN */
 #form-logIn {
-  margin-top: 0.5rem;
-  margin-left: 18rem;
-  margin-right: 18rem;
+  max-width: 500px;
   padding: 1rem;
 }
 
@@ -58,9 +70,7 @@
 
 /* URL SIGNUP */
 #form-signUp {
-  margin-top: 0.5rem;
-  margin-left: 15rem;
-  margin-right: 15rem;
+  max-width: 500px;
   padding: 1rem;
 }
 
@@ -81,4 +91,23 @@
 .avatar-twit {
     width: 150px;
     object-fit: cover;
+}
+
+@media only screen and (max-width: 675px) {
+  .nav-link {
+    font-size: 1rem;
+    margin-left: 160px;
+  }
+  .nav-item {
+    padding-top: 30px;
+  }
+  .twita-logo {
+    position: absolute;
+    height: 150px;
+    margin-top: -20px;
+    width: auto;
+  }
+  .nav {
+    display: inline-block;
+  }
 }
