--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,25 +1,31 @@
+<ul class="nav nav-fill mb-3">
+  
+    <img
+      src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/86cf185c-ad61-4faa-9c63-de77f6c62a3c/darinvh-ba3c3f94-64e4-49d3-9987-891d08a0a871.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvODZjZjE4NWMtYWQ2MS00ZmFhLTljNjMtZGU3N2Y2YzYyYTNjXC9kYXJpbnZoLWJhM2MzZjk0LTY0ZTQtNDlkMy05OTg3LTg5MWQwOGEwYTg3MS5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ._b6SIaMjJ7gvuePzNH3wJTCjNgBpSG6UiaEKb382_sc"
+      alt="Twita logo"
+      class="twita-logo"
+    />
+  
+  <li class="nav-item">
+    <a class="nav-link text-white badge badge-pill badge-primary" href="/"
+      >Home</a
+    >
+  </li>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <div class="container">
-        <a class="navbar-brand mt-3 mb-3" href="#">Twita.</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto mr-lg-5">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            
-            <li class="nav-item">
-                <a href="http://localhost:3000/logout">Log Out</a>
-            </li>
-            <% if (userSession._id != 'voidUsername') { %> 
-            <li class="nav-item">
-                <a href="/settings">User Settings</a>
-            </li>
-            <% } %> 
-          </ul>
-        </div>
-    </div>
-  </nav>
+  <% if (userSession._id != 'voidUsername') { %>
+  <li class="nav-item">
+    <a
+      class="nav-link text-white badge badge-pill badge-primary"
+      href="/settings"
+      >User Settings</a
+    >
+  </li>
+  <li class="nav-item">
+    <a
+      class="nav-link badge text-white badge-pill badge-primary"
+      href="http://localhost:3000/logout"
+      >Log Out</a
+    >
+  </li>
+  <% } %>
+</ul>
