--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,8 +22,15 @@
   </li>
   <li class="nav-item">
     <a
-      class="nav-link badge text-white badge-pill badge-primary"
-      href="http://localhost:3000/logout"
+      class="nav-link badge text-white badge-pill badge-info"
+      href="/discover"
+      >Discover other users</a
+    >
+  </li>
+  <li class="nav-item">
+    <a
+      class="nav-link badge text-white badge-pill badge-secondary"
+      href="/logout"
       >Log Out</a
     >
   </li>
