vercel.json added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,8 +104,8 @@
   <h2 class="titleHome">Ingresar a Twita</h3>
     <h6 class="text-center">Únete al twita ya mismo</h5>
       <div class="d-flex justify-content-center">
-        <a class="btn btn-signUp btn-lg" href="http://localhost:3000/registro">Regístrate aquí</a>
-        <a class="btn btn-logIn-home btn-lg" href="http://localhost:3000/login">Iniciar sesión</a>
+        <a class="btn btn-signUp btn-lg" href="/registro">Regístrate aquí</a>
+        <a class="btn btn-logIn-home btn-lg" href="/login">Iniciar sesión</a>
       </div>
       </div>
       </div>
