--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,7 +36,7 @@
               </button>
             </div>
             <div class="text-center">
-              <a class="link-logIn" href="http://localhost:3000/registro"
+              <a class="link-logIn" href="/registro"
                 >Regístrate en Twita</a
               >
             </div>
